feat: enhance URL pattern matching and update examples in configuration

--- a/extension/url-config.html
+++ b/extension/url-config.html
@@ -184,9 +184,10 @@
 
   <div class="examples">
     <strong>Examples:</strong><br>
-    • *.google.com - All Google subdomains<br>
+    • *.wikipedia.org - Wikipedia subdomains only (en.wikipedia.org, fr.wikipedia.org, etc.)<br>
     • https://api.example.com/* - All API endpoints<br>
-    • localhost:3000 - Local development server
+    • localhost:3000 - URLs containing this text<br>
+    • example.com - URLs containing "example.com" (matches subdomains but also partial matches)
   </div>
 
   <div class="url-list" id="urlList">
