--- a/extension/domain-config.html
+++ b/extension/domain-config.html
@@ -202,6 +202,10 @@
     <button class="action-button save-button" id="saveButton">Save</button>
   </div>
 
+  <div style="font-size: 10px; color: #888; text-align: center; margin-top: 8px; font-style: italic;">
+    Note: Changes will be reflected after reloading affected pages
+  </div>
+
   <script src="domain-config.js"></script>
 </body>
 <footer>
