feat: update periodic clearing description

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -295,7 +295,7 @@
         <span style="font-size: 10px; color: #999;">Manual cache clear</span>
       </div>
       <div style="font-size: 10px; color: #999; margin-top: 3px; line-height: 1.2;">
-        Periodic clearing: affects all websites. Wildcard fallback: by default, wildcard patterns (*.domain.com) skip cache clearing to avoid affecting all sites.
+        ℹ️ Periodic clearing with wildcard fallback: by default, wildcard patterns (*.domain.com) skip cache clearing to avoid affecting all sites.
       </div>
     </div>
   </div>
