--- a/extension/popup.html
+++ b/extension/popup.html
@@ -324,8 +324,8 @@
           </label>
         </div>
         <div class="cache-clear-container">
+          <span style="font-size: 10px; color: #999;">Manual cache clear: </span>
           <button class="manual-cache-button" id="manualCacheClear">Clear Cache Now</button>
-          <span style="font-size: 10px; color: #999;">Manual cache clear</span>
         </div>
         <div style="font-size: 10px; color: #999; margin-top: 3px; line-height: 1.2;">
           ℹ️ Periodic clearing with wildcard fallback: by default, wildcard patterns (*.domain.com) skip cache clearing to avoid affecting all sites.
