fix: refine cache clearing instructions for clarity

--- a/extension/domain-config.html
+++ b/extension/domain-config.html
@@ -208,7 +208,7 @@
     <strong>💡 Best Practice:</strong> Use exact domain names for full feature support. Wildcards work fine for basic cache prevention but may limit optional cache clearing features.
     <br><br>
     <strong>Cache Clearing Methods:</strong> The extension primarily uses HTTP headers to prevent caching. 
-    For additional cache clearing that affects all sites (not just configured domains), enable "Periodic cache clearing" in the main popup.
+    For additional cache clearing, enable "Periodic cache clearing" in the main popup.
   </div>
 
   <div class="domain-list" id="domainList">
