feat: update version to 1.2.1 and display current page domain in popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -359,6 +359,10 @@
     </div>
   </div>
   
+  <div class="current-domain-info" id="currentDomainInfo" style="text-align: center; font-size: 10px; color: #999; margin: 8px 0; line-height: 1.2; display: none;">
+    <span>💡 Current page domain: <strong id="currentDomain">—</strong></span>
+  </div>
+  
   <footer>
     <div class="copyright">© 2025 @thejjw • <span id="version"></span></div>
   </footer>
